force-app/main/default/objects/CustomProduct__c/CustomProduct__c.object-meta.xml
<CustomObject>
    <label>Custom Product</label>
    <pluralLabel>Custom Products</pluralLabel>
    <description>Custom products for catalog display component by Jayyum with Claude Sonnet</description>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>