force-app/main/default/objects/CustomProduct__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>URL for product image</description>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>