force-app/main/default/objects/CustomProduct__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Type of product for categorization</description>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type1</fullName>
            </value>
            <value>
                <fullName>Type2</fullName>
            </value>
            <value>
                <fullName>Type3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>