force-app/main/default/objects/CustomProduct__c/fields/ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ShortDesc__c</fullName>
    <description>Short description of the product</description>
    <label>Short Description</label>
    <required>true</required>
    <type>TextArea</type>
    <length>255</length>
</CustomField>